added nz energy companies

--- a/billfinder.ipynb
+++ b/billfinder.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 373,
    "id": "66b2c68f-ba3f-4d17-b8fd-8baa1ddd74f1",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,8 @@
     "        \n",
     "        self.source_urls_energy = {'Canada': 'https://en.wikipedia.org/wiki/List_of_Canadian_electric_utilities',\n",
     "                                   'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_electric_companies',\n",
-    "                                   'UK': 'https://www.utilitysavingexpert.com/energy/suppliers/'}\n",
+    "                                   'UK': 'https://www.utilitysavingexpert.com/energy/suppliers/',\n",
+    "                                   'New Zealand': 'https://en.wikipedia.org/wiki/New_Zealand_electricity_market'}\n",
     "        \n",
     "        self.source_urls_water = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_water_companies',\n",
     "                                  'UK': 'https://en.wikipedia.org/wiki/United_Kingdom_water_companies'}\n",
@@ -66,6 +67,15 @@
     "                    for row in _.find_all('tr'):\n",
     "                        if tds := row.find_all('td'):\n",
     "                            company_set.add(tds[1].text)\n",
+    "                            \n",
+    "        elif country == 'New Zealand':\n",
+    "            for _ in soup.find('caption').next_siblings:\n",
+    "                if _.name == 'tbody':\n",
+    "                    for row in _.find_all('tr'):\n",
+    "                        if c := row.find('td'):\n",
+    "                            company_set.add(c.text)\n",
+    "                    break\n",
+    "            \n",
     "                            \n",
     "        print(f'{country}: found {len(company_set):,} energy companies')\n",
     "        \n",
@@ -169,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 374,
    "id": "1eb69da0-84ec-425c-9dfc-72b2cb4e8115",
    "metadata": {},
    "outputs": [],
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 375,
    "id": "876c0097-79d2-4227-8404-9d4bd961d1b7",
    "metadata": {},
    "outputs": [
@@ -191,19 +201,19 @@
       "USA: found 159 gas companies\n",
       "USA: found 558 water companies\n",
       "UK: found 30 water companies\n",
-      "USA: found 613 energy companies\n",
+      "New Zealand: found 11 energy companies\n",
       "UK: found 75 energy companies\n",
       "Canada: found 96 energy companies\n",
-      "collected 1,522 unique companies\n"
+      "collected 939 unique companies\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.BillFinder at 0x1091890a0>"
+       "<__main__.BillFinder at 0x110c901c0>"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +223,7 @@
     "        .get_gas_companies(country='USA') \\\n",
     "        .get_water_companies('USA') \\\n",
     "        .get_water_companies('UK') \\\n",
-    "        .get_energy_companies('USA') \\\n",
+    "        .get_energy_companies('New Zealand') \\\n",
     "        .get_energy_companies('UK') \\\n",
     "        .get_energy_companies('Canada') \\\n",
     "        .review_company_names()"
@@ -221,13 +231,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 376,
    "id": "cb84a182-20e1-4816-8f1b-b72617093435",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['advanti gas',\n",
+       " 'affect energy',\n",
+       " 'alectra utilities',\n",
+       " 'algoma power',\n",
+       " 'altalink',\n",
+       " 'angelic energy',\n",
+       " 'antigonish electric utility',\n",
+       " 'atco electric',\n",
+       " 'atco electric yukon',\n",
+       " 'avanti gas',\n",
+       " 'avro energy',\n",
+       " 'battle river power',\n",
+       " 'beam energy',\n",
+       " 'beaver rea',\n",
+       " 'berwick electric light',\n",
+       " 'better energy',\n",
+       " 'blue mountain power',\n",
+       " 'boost power',\n",
+       " 'boralex',\n",
+       " 'borradaile rea',\n",
+       " 'braes rea',\n",
+       " 'bristol energy',\n",
+       " 'british gas',\n",
+       " 'british gas business',\n",
+       " 'bulb energy',\n",
+       " 'canadian niagara power',\n",
+       " 'canso electric light',\n",
+       " 'cardiff energy supply',\n",
+       " 'cartier wind energy',\n",
+       " 'churchill falls',\n",
+       " 'city lethbridge electric utility',\n",
+       " 'city medicine hat electric utility',\n",
+       " 'city red deer electric light and power',\n",
+       " 'claysmore rea',\n",
+       " 'clear business energy',\n",
+       " 'co-operative energy',\n",
+       " 'columbia power',\n",
+       " 'contact energy',\n",
+       " 'contract natrual gas',\n",
+       " 'cornwall electric',\n",
+       " 'corona energy',\n",
+       " 'crown gas power',\n",
+       " 'daligas',\n",
+       " 'devonia rea',\n",
+       " 'direct energy',\n",
+       " 'drayton valley rea',\n",
+       " 'dual energy',\n",
+       " 'duffield rea',\n",
+       " 'ebico',\n",
+       " 'economy energy',\n",
+       " 'ecotricity',\n",
+       " 'edf energy',\n",
+       " 'effortless energy',\n",
+       " 'electric kiwi',\n",
+       " 'elexicon energy',\n",
+       " 'energie edmunston energy',\n",
+       " 'energy',\n",
+       " 'energy+',\n",
+       " 'engie',\n",
+       " 'enmax',\n",
+       " 'enstroga energy',\n",
+       " 'eon',\n",
+       " 'epcor',\n",
+       " 'epcor utilities',\n",
+       " 'equs',\n",
+       " 'ermineskin rea',\n",
+       " 'esb energy',\n",
+       " 'fairerpower',\n",
+       " 'fenn rea',\n",
+       " 'festival hydro',\n",
+       " 'flick electric',\n",
+       " 'flow energy',\n",
+       " 'fortisalberta',\n",
+       " 'fortisbc',\n",
+       " 'future energy',\n",
+       " 'gazprom energy',\n",
+       " 'gen4u',\n",
+       " 'genesis energy',\n",
+       " 'glide',\n",
+       " 'gnergy',\n",
+       " 'good energy',\n",
+       " 'grand forks hydro',\n",
+       " 'greater sudbury hydro',\n",
+       " 'green energy',\n",
+       " 'green star energy',\n",
+       " 'haven power',\n",
+       " 'heart river rea',\n",
+       " 'hudson energy',\n",
+       " 'hydro',\n",
+       " 'hydro magog',\n",
+       " 'hydro ottawa',\n",
+       " 'hydro westmount',\n",
+       " 'hydro-québec',\n",
+       " 'hydro-sherbrooke',\n",
+       " 'innergex renewable energy',\n",
+       " 'iresa',\n",
+       " 'isupply energy',\n",
+       " 'kitchener wilmot hydro',\n",
+       " 'kneehill rea',\n",
+       " 'lindale rea',\n",
+       " 'loco2 energy',\n",
+       " 'london hydro',\n",
+       " 'lower churchill development',\n",
+       " 'lunenburg electric utility',\n",
+       " 'm&s energy',\n",
+       " 'mahone bay electric utility',\n",
+       " 'makenzie rea',\n",
+       " 'manitoba hydro',\n",
+       " 'maritime electric',\n",
+       " 'mayerthorpe and rea',\n",
+       " 'mercury energy',\n",
+       " 'meridian energy',\n",
+       " 'municipality crowsnest pass',\n",
+       " 'national gas',\n",
+       " 'nelson hydro',\n",
+       " 'new westminster',\n",
+       " 'newfoundland and labrador hydro',\n",
+       " 'newfoundland power',\n",
+       " 'niton rea',\n",
+       " 'north parkland power',\n",
+       " 'northland utilities',\n",
+       " 'northwest territories power',\n",
+       " 'nova energy',\n",
+       " 'nova scotia power',\n",
+       " 'npower',\n",
+       " 'npower business',\n",
+       " 'oakville hydro',\n",
+       " 'octopus energy',\n",
+       " 'opus energy',\n",
+       " 'other retailers',\n",
+       " 'ovo energy',\n",
+       " 'penticton',\n",
+       " 'peterborough energy',\n",
+       " 'places for people energy',\n",
+       " 'power',\n",
+       " 'pulse energy',\n",
+       " 'qulliq energy',\n",
+       " 'rio tinto alcan',\n",
+       " 'riverport electric light',\n",
+       " 'robin hood energy',\n",
+       " 'sainsbury’s energy',\n",
+       " 'saint john energy',\n",
+       " 'saskatoon light power',\n",
+       " 'saskpower',\n",
+       " 'scottish power',\n",
+       " 'shell energy',\n",
+       " 'southend energy',\n",
+       " 'spark energy',\n",
+       " 'sse',\n",
+       " 'sse airtricity',\n",
+       " 'sse southern electric',\n",
+       " 'sse swalec',\n",
+       " 'sterling rea',\n",
+       " 'stony plain rea',\n",
+       " 'summerland',\n",
+       " 'summerside electric',\n",
+       " 'swift current light and power',\n",
+       " 'synergy north',\n",
+       " 'the energy deal',\n",
+       " 'together energy',\n",
+       " 'tomahawk rea',\n",
+       " 'tonik energy',\n",
+       " 'toronto hydro',\n",
+       " 'total gas power',\n",
+       " 'town cardston',\n",
+       " 'town fort macleod',\n",
+       " 'town perth andover',\n",
+       " 'town ponoka',\n",
+       " 'transalta',\n",
+       " 'trustpower',\n",
+       " 'united gas power',\n",
+       " 'utilita',\n",
+       " 'utility warehouse',\n",
+       " 'vocus',\n",
+       " 'waterloo north hydro',\n",
+       " 'west liberty rea',\n",
+       " 'white rose energy',\n",
+       " 'willingdon rea',\n",
+       " 'yorkshire gas and power',\n",
+       " 'yukon energy']"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bf.collected_companies['energy']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02da0c18-d9dd-4f27-8854-4d0f04e41990",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
