added australian energy companies

--- a/billfinder.ipynb
+++ b/billfinder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 3,
    "id": "a1204c32-ee3c-4b1e-9a69-17448ed34ca0",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 7,
    "id": "66b2c68f-ba3f-4d17-b8fd-8baa1ddd74f1",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,7 @@
     "        self.source_urls_energy = {'Canada': 'https://en.wikipedia.org/wiki/List_of_Canadian_electric_utilities',\n",
     "                                   'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_electric_companies',\n",
     "                                   'UK': 'https://www.utilitysavingexpert.com/energy/suppliers/',\n",
+    "                                   'Australia': 'https://www.canstarblue.com.au/electricity/largest-energy-companies-australia/',\n",
     "                                   'New Zealand': 'https://en.wikipedia.org/wiki/New_Zealand_electricity_market'}\n",
     "        \n",
     "        self.source_urls_water = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_water_companies',\n",
@@ -74,6 +75,12 @@
     "                    for row in _.find_all('tr'):\n",
     "                        if c := row.find('td'):\n",
     "                            company_set.add(c.text)\n",
+    "                    break\n",
+    "        elif country == 'Australia':\n",
+    "            for s in soup.find('h2', id='biggest').next_siblings:\n",
+    "                if s.name == 'ul':\n",
+    "                    for item_ in s.find_all('li'):\n",
+    "                        company_set.add(item_.find('strong').text)\n",
     "                    break\n",
     "            \n",
     "                            \n",
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 8,
    "id": "1eb69da0-84ec-425c-9dfc-72b2cb4e8115",
    "metadata": {},
    "outputs": [],
@@ -189,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 9,
    "id": "876c0097-79d2-4227-8404-9d4bd961d1b7",
    "metadata": {},
    "outputs": [
@@ -201,19 +208,19 @@
       "USA: found 159 gas companies\n",
       "USA: found 558 water companies\n",
       "UK: found 30 water companies\n",
-      "New Zealand: found 11 energy companies\n",
+      "Australia: found 23 energy companies\n",
       "UK: found 75 energy companies\n",
       "Canada: found 96 energy companies\n",
-      "collected 939 unique companies\n"
+      "collected 951 unique companies\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.BillFinder at 0x110c901c0>"
+       "<__main__.BillFinder at 0x119c946d0>"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +230,7 @@
     "        .get_gas_companies(country='USA') \\\n",
     "        .get_water_companies('USA') \\\n",
     "        .get_water_companies('UK') \\\n",
-    "        .get_energy_companies('New Zealand') \\\n",
+    "        .get_energy_companies('Australia') \\\n",
     "        .get_energy_companies('UK') \\\n",
     "        .get_energy_companies('Canada') \\\n",
     "        .review_company_names()"
@@ -231,22 +238,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 10,
    "id": "cb84a182-20e1-4816-8f1b-b72617093435",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['advanti gas',\n",
+       "['1st energy',\n",
+       " 'actewagl',\n",
+       " 'advanti gas',\n",
        " 'affect energy',\n",
+       " 'agl',\n",
        " 'alectra utilities',\n",
        " 'algoma power',\n",
+       " 'alinta energy',\n",
        " 'altalink',\n",
        " 'angelic energy',\n",
        " 'antigonish electric utility',\n",
        " 'atco electric',\n",
        " 'atco electric yukon',\n",
+       " 'aurora energy',\n",
        " 'avanti gas',\n",
        " 'avro energy',\n",
        " 'battle river power',\n",
@@ -275,14 +287,16 @@
        " 'clear business energy',\n",
        " 'co-operative energy',\n",
        " 'columbia power',\n",
-       " 'contact energy',\n",
        " 'contract natrual gas',\n",
        " 'cornwall electric',\n",
        " 'corona energy',\n",
+       " 'covau',\n",
        " 'crown gas power',\n",
        " 'daligas',\n",
        " 'devonia rea',\n",
+       " 'diamond energy',\n",
        " 'direct energy',\n",
+       " 'dodo',\n",
        " 'drayton valley rea',\n",
        " 'dual energy',\n",
        " 'duffield rea',\n",
@@ -291,32 +305,34 @@
        " 'ecotricity',\n",
        " 'edf energy',\n",
        " 'effortless energy',\n",
-       " 'electric kiwi',\n",
        " 'elexicon energy',\n",
        " 'energie edmunston energy',\n",
        " 'energy',\n",
+       " 'energy locals',\n",
        " 'energy+',\n",
+       " 'energyaustralia',\n",
        " 'engie',\n",
        " 'enmax',\n",
+       " 'enova energy',\n",
        " 'enstroga energy',\n",
        " 'eon',\n",
        " 'epcor',\n",
        " 'epcor utilities',\n",
        " 'equs',\n",
+       " 'ergon energy',\n",
        " 'ermineskin rea',\n",
        " 'esb energy',\n",
        " 'fairerpower',\n",
        " 'fenn rea',\n",
        " 'festival hydro',\n",
-       " 'flick electric',\n",
        " 'flow energy',\n",
        " 'fortisalberta',\n",
        " 'fortisbc',\n",
        " 'future energy',\n",
        " 'gazprom energy',\n",
        " 'gen4u',\n",
-       " 'genesis energy',\n",
        " 'glide',\n",
+       " 'globird energy',\n",
        " 'gnergy',\n",
        " 'good energy',\n",
        " 'grand forks hydro',\n",
@@ -338,9 +354,11 @@
        " 'kitchener wilmot hydro',\n",
        " 'kneehill rea',\n",
        " 'lindale rea',\n",
+       " 'locality planning energy',\n",
        " 'loco2 energy',\n",
        " 'london hydro',\n",
        " 'lower churchill development',\n",
+       " 'lumo energy',\n",
        " 'lunenburg electric utility',\n",
        " 'm&s energy',\n",
        " 'mahone bay electric utility',\n",
@@ -348,8 +366,7 @@
        " 'manitoba hydro',\n",
        " 'maritime electric',\n",
        " 'mayerthorpe and rea',\n",
-       " 'mercury energy',\n",
-       " 'meridian energy',\n",
+       " 'momentum energy',\n",
        " 'municipality crowsnest pass',\n",
        " 'national gas',\n",
        " 'nelson hydro',\n",
@@ -360,21 +377,23 @@
        " 'north parkland power',\n",
        " 'northland utilities',\n",
        " 'northwest territories power',\n",
-       " 'nova energy',\n",
        " 'nova scotia power',\n",
        " 'npower',\n",
        " 'npower business',\n",
        " 'oakville hydro',\n",
        " 'octopus energy',\n",
        " 'opus energy',\n",
-       " 'other retailers',\n",
+       " 'origin',\n",
        " 'ovo energy',\n",
        " 'penticton',\n",
        " 'peterborough energy',\n",
        " 'places for people energy',\n",
        " 'power',\n",
-       " 'pulse energy',\n",
+       " 'powerdirect',\n",
+       " 'powershop',\n",
        " 'qulliq energy',\n",
+       " 'reamped energy',\n",
+       " 'red energy',\n",
        " 'rio tinto alcan',\n",
        " 'riverport electric light',\n",
        " 'robin hood energy',\n",
@@ -384,6 +403,7 @@
        " 'saskpower',\n",
        " 'scottish power',\n",
        " 'shell energy',\n",
+       " 'simply energy',\n",
        " 'southend energy',\n",
        " 'spark energy',\n",
        " 'sse',\n",
@@ -394,6 +414,7 @@
        " 'stony plain rea',\n",
        " 'summerland',\n",
        " 'summerside electric',\n",
+       " 'sumo',\n",
        " 'swift current light and power',\n",
        " 'synergy north',\n",
        " 'the energy deal',\n",
@@ -407,11 +428,9 @@
        " 'town perth andover',\n",
        " 'town ponoka',\n",
        " 'transalta',\n",
-       " 'trustpower',\n",
        " 'united gas power',\n",
        " 'utilita',\n",
        " 'utility warehouse',\n",
-       " 'vocus',\n",
        " 'waterloo north hydro',\n",
        " 'west liberty rea',\n",
        " 'white rose energy',\n",
@@ -420,7 +439,7 @@
        " 'yukon energy']"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
